# Texture_Frames

./: .gitignore  LICENSE  MILESTONES.md  PROVENANCE.md  README.md  pyproject.toml  requirements-colab.txt
.claude/: settings.json
encoder_parser/: ARGS_V2_DESIGN.md  DESIGN.md  args2_data.py  args_data.py  augment.py  data.py  eval_args.py  eval_args2.py  eval_frame.py  eval_frame2.py  eval_trigger.py  frame2_data.py  lexicon.py  sesame_splits.py  train_args.ipynb  train_args.py  train_args2.ipynb  train_args2.py  train_encoder.ipynb  train_frame.ipynb  train_frame.py  train_frame2.ipynb  train_frame2.py  train_trigger.py
encoder_parser/tests/: test_args2_data.py  test_args_data.py  test_augment.py  test_data_core.py  test_frame2.py  test_lexicon.py  test_load_trigger.py  test_model_args2.py  test_train_args2.py
model_cards/: upload_cards.py
model_cards/args/: README.md
model_cards/frame/: README.md
model_cards/trigger/: README.md
reproduce_baseline/: eval_baseline.py  reproduce_baseline.ipynb
src/texture_frames/: __init__.py  args2_data.py  args_data.py  augment.py  cli.py  data.py  frame2_data.py  lexicon.py  model_args2.py  model_frame2.py  pipeline.py  weights.py
tests/: test_package.py
