[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "texture-frames"
version = "0.1.0"
description = "Fast DeBERTa-based FrameNet semantic frame parser (encoder rearchitecture of frame-semantic-transformer)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "James Carney", email = "carneyjp@gmail.com" }]
keywords = ["framenet", "semantic-parsing", "srl", "nlp", "deberta"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.44",
    "sentencepiece>=0.1.99",
    "nltk>=3.8",
    "huggingface_hub>=0.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
texture-frames = "texture_frames.cli:main"

[project.urls]
Homepage = "https://github.com/texturejc/Texture_Frames"

[tool.setuptools.packages.find]
where = ["src"]
